Build: Use the Eclipse compiler for null analysis.
* Include the Eclipse JDT preference files for use by the ECJ compiler.
* Use the JDT `NonNullByDefault` annotation which ECJ interprets as
  non-null-by-default in more contexts (e.g. for type parameters).
  Remove various now redundant null annotations.
* Add `external-annotations` module for external ECJ null annotations.
  This reduces the need for various `assertNonNull` calls.